# simple-useragent

./: .gitignore  ACKNOWLEDGMENTS  MANIFEST.in  README.md  build.sh  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: CONTRIBUTING.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md
.github/DISCUSSION_TEMPLATE/: feature-requests.yml  questions-and-answers.yml
.github/ISSUE_TEMPLATE/: general-issue.yml
.github/workflows/: tests.yaml
src/simple_useragent/: __init__.py  core.py
src/simple_useragent/data/: fallback.json
tests/: __init__.py  test_core.py
tests/data/: fake_api_resp.json  fake_website_resp.html
