[metadata]
name = simple-useragent
version = 0.1.3
author = Lennart Haack
author_email = info@lennolium.dev
license = GPL-3.0
license_files = LICENSE
description = Seamlessly fetch authentic and current user agents with ease
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lennolium/simple-useragent
project_urls =
    Bug Tracker = https://github.com/Lennolium/simple-useragent/issues
    Source = https://github.com/Lennolium/simple-useragent
    Download = https://github.com/Lennolium/simple-useragent/releases/latest
    Documentation = https://github.com/Lennolium/simple-useragent/README.md
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research


[options]
zip_safe = False
package_dir =
    = src
packages = find:

include_package_data = True
python_requires = >=3.8
install_requires =
    beautifulsoup4==4.12.3
    platformdirs==4.2.0
    requests==2.31.0
    ua-parser==0.18.0

[options.packages.find]
where = src
exclude =
    tests
